# onnx-misuse

./: .clang-format  CMakeLists.txt  LICENSE  README.md
matmul/: gen_matmul_onnx.py  run_trt.sh
ort_runner/: ort_runner.cpp
resampler/: gen_upscale_onnx.py  run_trt.sh
